ポータルサイト整備

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,7 +10,7 @@ layout: compress
     {% include head.html %}
 </head>
 <body>
-    {% include nav.html %}
+    {% comment %}{% include nav.html %}{% endcomment %}
     <!-- Header -->
     <header class="header" role="banner">
         <div class="wrapper animated fadeIn">
