--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -10,7 +10,7 @@ layout: compress
     {% include head.html %}
 </head>
 <body>
-    {% include nav.html %}
+    {% comment %}{% include nav.html %}{% endcomment %}
     <!-- Header -->
     <header class="header flex" role="banner">
         <div class="container animated fadeIn">
@@ -23,24 +23,25 @@ layout: compress
                         	<p style="font-size:1.2rem;font-weight:300">{{ site.title }}</p>
 			            </a>
                     </h3>
-                    <hr class="hr-line">
+                    <!--<hr class="hr-line">
                     <h3 class="title">
                         <a href="{{ site.url }}">
                         	<p style="font-size:1rem;font-weight:300">{{ site.bio }}</p>
 			            </a>
-                    </h3>
+                    </h3>-->
                     {% include social-links.html %}
                   <hr class="hr-line">
                   <h3 class="title">
                          <a class="btn zoombtn" href="{{ site.url }}/about">
                          About
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/posts">
-                         Posts
+                         <a class="btn zoombtn" href="{{ site.blog_url }}">
+                         Blog
                          </a>
-                         <a class="btn zoombtn" href="{{ site.url }}/projects">
+                         <!--<a class="btn zoombtn" href="{{ site.url }}/projects">
                          Projects
-                         </a>
+                         </a>-->
+                         <div class="btn">Projects</div>
                  </h3>
             </div>
         </div>
