RedmineとGitlabのリンクを追加

--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -25,4 +25,6 @@
                         {% if site.keybase %}<a class="social-btn" href="https://keybase.io/{{ site.keybase }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-key"></i></a>{% endif %}
                         {% if site.xmpp %}<a class="social-btn" href="xmpp:{{ site.xmpp }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-lightbulb-o"></i></a>{% endif %}
                         {% if site.hackernews %}<a class="social-btn" href="https://news.ycombinator.com/user?id={{ site.hackernews }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-hacker-news"></i></a>{% endif %}
+                        {% if site.redmine-url %}<a class="social-btn" href="{{ site.redmine-url }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-diamond"></i></a>{% endif %}
+                        {% if site.gitlab-url %}<a class="social-btn" href="{{ site.gitlab-url }}" target="_blank" rel="noopener noreferrer"><i class="fa fa-fw fa-gitlab"></i></a>{% endif %}
                   </h3>
